@@ -1,4 +1,9 @@
   * doc/upgrade.html: typo.
+  * svlogd.c: bugfix: properly print new-line character to the log on end
+    of line (thx Pawel Chmielowski).
+  * trysocketlib.c: new; check for libraries needed for socket() on some
+    systems (fixes link failure on solaris, thx Uffe Jakobsen).
+  * Makefile: adapt.
 
 runit 0.13.0
 Mon, 12 Jan 2004 14:39:38 +0000
